[package]
name = "train-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
axum-macros = "0.4.1"
btreemultimap = "0.1.1"
ordered-float = "4.2.2"
rand = "0.8.5"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.124"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread", "signal", "time"] }
tower-http = { version = "0.5.2", features = ["fs", "redirect"] }
packet = { path = "../packet"}